fixed p alignment

--- a/css/style-media.css
+++ b/css/style-media.css
@@ -119,6 +119,7 @@ h2{
 
 #umiami-summary{
   font-size: 16px;
+  margin: 0 auto;
 }
 
 
